--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Edit meta tags for SEO -->
-    <title>DeveloperFolio | Developer Portfolio Template</title>
-    <meta name="title" content="DeveloperFolio | Developer Portfolio Template">
+    <title>Alexander Hung | Professional Portfolio</title>
+    <meta name="title" content="Alexander Hung | Professional Portfolio">
     <meta name="description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://developerfolio.js.org/">
-    <meta property="og:title" content="DeveloperFolio | Developer Portfolio Template">
+    <meta property="og:title" content="Alexander Hung | Professional Portfolio">
     <meta property="og:description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
     <!-- Link to a hosted image -->
     <!-- <meta property="og:image" content=""> -->
@@ -20,7 +20,7 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://developerfolio.js.org/">
-    <meta property="twitter:title" content="DeveloperFolio | Developer Portfolio Template">
+    <meta property="twitter:title" content="Alexander Hung | Professional Portfolio">
     <meta property="twitter:description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
     <!-- Link to a hosted image -->
     <!-- <meta property="twitter:image" content=""> -->
